--- a/Resource/css/style.css
+++ b/Resource/css/style.css
@@ -6,6 +6,17 @@ body{
   background-attachment: fixed;
   background-size: cover;
 }
+.navbar-fixed{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 10;
+}
+.navbar-fixed-clear{
+    padding-top: 56px;
+    width: 100%;
+}
 a{
   text-decoration: none;
 }
